# GoStat

./: .gitignore  CONFIG  GoStat.cabal  LICENSE  LOCAL_CONFIG  Makefile  README  StronaStartowa.url  TODO
data/2011/4/1/: AKW-masec.sgf  AVer-masec.sgf  About1k-masec.sgf  Gorobei-masec.sgf  Hellteh-masec-2.sgf  Hellteh-masec.sgf  LeT63-masec-2.sgf  LeT63-masec.sgf  Pignouf-masec.sgf  abukuma-masec.sgf  alesollag-masec.sgf  aureg-masec-2.sgf  aureg-masec.sgf  brest-masec.sgf  dim190786-masec.sgf  jim9k-masec.sgf  jsun1234-masec.sgf  jubjub-masec.sgf  jycatgo-masec.sgf  kasui-masec.sgf  krieger-masec.sgf  kringabe-masec.sgf  lklkllk-masec.sgf  masec-Asid2004.sgf  masec-Backins.sgf  masec-Cylar.sgf  masec-Gorobei.sgf  masec-Hellteh.sgf  masec-IKOMABOY.sgf  masec-LeT63-2.sgf  masec-LeT63-3.sgf  masec-LeT63-4.sgf  masec-LeT63-5.sgf  masec-LeT63.sgf  masec-PanYun.sgf  masec-Shlang.sgf  masec-Test123.sgf  masec-Volf.sgf  masec-agente.sgf  masec-akulu.sgf  (+58 more)
data/2011/4/10/: Ashmash-masec.sgf  BrownRice-masec.sgf  EVANG-masec.sgf  Krior-masec.sgf  LeT63-masec.sgf  Lehyo-masec.sgf  Poloten4ik-masec.sgf  andrzej-masec.sgf  blueblues-masec.sgf  chepak-masec.sgf  columjus-masec.sgf  ey-masec.sgf  gojonathan-masec-2.sgf  gojonathan-masec.sgf  gost1995-masec-2.sgf  gost1995-masec-3.sgf  gost1995-masec.sgf  hgfhjgj-masec-2.sgf  hgfhjgj-masec.sgf  iFUspx-masec.sgf  jycatgo-masec.sgf  laska0-masec.sgf  masec-Adimante.sgf  masec-Ashmash.sgf  masec-Baib.sgf  masec-Grisharoot.sgf  masec-Havok.sgf  masec-LeT63.sgf  masec-LoWeLy-2.sgf  masec-LoWeLy.sgf  masec-Loffel.sgf  masec-Mysigh.sgf  masec-Poloten4ik.sgf  masec-Tews.sgf  masec-Voja.sgf  masec-Yasiru.sgf  masec-amandine.sgf  masec-andrzej.sgf  masec-artem77777.sgf  masec-ayoub-2.sgf  (+44 more)
data/2011/4/11/: AlGebr-masec.sgf  CHIEN-masec.sgf  EMCQ-masec.sgf  FlowRider-masec.sgf  JPNdad-masec-2.sgf  JPNdad-masec.sgf  Jakunen-masec.sgf  Karyal-masec.sgf  LeT63-masec.sgf  Masson-masec.sgf  Oin-masec-2.sgf  Oin-masec.sgf  Ryofu-masec-2.sgf  Ryofu-masec.sgf  Sifno-masec.sgf  UMDro-masec-2.sgf  UMDro-masec.sgf  Yasiru-masec.sgf  aevo-masec.sgf  coverme501-masec.sgf  efef-masec.sgf  elpwninat-masec.sgf  feign-masec.sgf  itclown-masec.sgf  jimshan-masec.sgf  konvin-masec.sgf  masec-AlGebr.sgf  masec-Angela.sgf  masec-ArsenLapin.sgf  masec-Barmaley.sgf  masec-Gekirin.sgf  masec-Jakunen-2.sgf  masec-Jakunen.sgf  masec-MixER-2.sgf  masec-MixER.sgf  masec-Mors.sgf  masec-Rastafa.sgf  masec-Ryofu.sgf  masec-Tews.sgf  masec-UMDro.sgf  (+40 more)
data/2011/4/12/: A1R-masec.sgf  AAKKs-masec.sgf  About1k-masec.sgf  Eneisten-masec.sgf  HenryGo-masec.sgf  Kage1258-masec.sgf  LeT63-masec.sgf  MAI19-masec-2.sgf  MAI19-masec.sgf  MixER-masec.sgf  OncesMore-masec.sgf  Poloten4ik-masec.sgf  SamsonSAD-masec.sgf  amv0107-masec.sgf  azerti-masec-2.sgf  azerti-masec.sgf  basop-masec.sgf  bobosoi-masec-2.sgf  bobosoi-masec.sgf  darmsy-masec.sgf  hashichu-masec.sgf  katalizorr-masec.sgf  klouky-masec.sgf  kosternik-masec.sgf  laska0-masec.sgf  lavienrose-masec.sgf  masec-A1R.sgf  masec-ArsenLapin.sgf  masec-Curunir.sgf  masec-Fenrirs.sgf  masec-GoUniverse.sgf  masec-KarlSoest-2.sgf  masec-MAI19-2.sgf  masec-MAI19-3.sgf  masec-MAI19-4.sgf  masec-MAI19-5.sgf  masec-MAI19.sgf  masec-Oin.sgf  masec-Tews-2.sgf  masec-Tews.sgf  (+39 more)
data/2011/4/13/: EGC0524-masec.sgf  EQREB-masec.sgf  HellFenix-masec.sgf  Sanako-masec.sgf  VaeVictis-masec.sgf  VincentR-masec.sgf  abukuma-masec.sgf  akoetou-masec.sgf  asojuk-masec.sgf  behram-masec.sgf  cypress-masec.sgf  heboatari-masec-2.sgf  heboatari-masec.sgf  hgfhjgj-masec.sgf  huracan-masec.sgf  igdrazil-masec.sgf  johny4226-masec.sgf  kennzyuu-masec-2.sgf  kennzyuu-masec.sgf  lexansoft-masec.sgf  marcostlse-masec.sgf  masec-Hunternif.sgf  masec-ICE22.sgf  masec-Piou.sgf  masec-Rastafa.sgf  masec-Sakura88.sgf  masec-Seneca.sgf  masec-Yasiru.sgf  masec-akoetou.sgf  masec-amnouy.sgf  masec-asojuk.sgf  masec-b3n.sgf  masec-bamboze.sgf  masec-birigun.sgf  masec-chiufaiho.sgf  masec-dewanokuni-2.sgf  masec-dewanokuni-3.sgf  masec-dewanokuni.sgf  masec-disco2.sgf  masec-heboatari-2.sgf  (+33 more)
data/2011/4/14/: Diederik-masec.sgf  Kaizoku3-masec.sgf  Maev-masec.sgf  Sumrak-masec-2.sgf  Sumrak-masec.sgf  akoetou-masec.sgf  anagos-masec.sgf  andrzej-masec-2.sgf  andrzej-masec.sgf  asd345-masec.sgf  atgw-masec.sgf  boB4f37t-masec.sgf  boule2-masec.sgf  davidx2-masec.sgf  eugen54-masec-2.sgf  eugen54-masec.sgf  grrr-masec.sgf  hgfhjgj-masec.sgf  kaliaganov-masec.sgf  (+62 more)
db/: games.db
doc/: Motywacja.odt  motiv.sh  motywacja.tex  plan.txt  programisty.tex  tutorial.txt  user.sh  user_doc.txt  uzytkownika.tex
doc/src/: DokumentacjaProgramisty.tex  MotywacjaProjektu.tex  PodrecznikUzytkownika.tex  Slownik.tex  dict.sh  doc.sh  dokumentWizji.tex  motiv.sh  motywacja.tex  programisty.tex  slownik.tex  user.sh  uzytkownika.tex
doc/txt/: motiv.txt  plan.txt  prog_doc.txt
docs/: Main.html  doc-index.html  index-frames.html  index.html
example_games/1/: Aisa-masec.sgf  DEEDEED-masec-2.sgf  DEEDEED-masec.sgf  Erus01-masec.sgf  Finn-masec.sgf  Glypec-masec-2.sgf  Glypec-masec.sgf  JudeFraise-masec.sgf  Kjara-masec.sgf  Kumorin-masec.sgf  PChan-masec.sgf  Remekelek-masec.sgf  SONIK-masec.sgf  WhiteAngel-masec.sgf  andersg-masec.sgf  anger1-masec.sgf  bogdvictor-masec-2.sgf  bogdvictor-masec-3.sgf  bogdvictor-masec.sgf  dragon9-masec.sgf  grrr-masec.sgf  hashichu-masec-2.sgf  hashichu-masec.sgf  interlekin-masec.sgf  jabomolox-masec.sgf  jvwalshmd-masec.sgf  kimyas-masec.sgf  masec-Aixpert.sgf  masec-Avtor.sgf  masec-Brakeshoe.sgf  masec-DEEDEED-2.sgf  masec-DEEDEED.sgf  masec-Finn-2.sgf  masec-Finn-3.sgf  masec-Finn.sgf  masec-ForestGo.sgf  masec-Glypec-2.sgf  masec-Glypec.sgf  masec-Got2.sgf  masec-HELLMATRIX.sgf  (+53 more)
public/: confirm.js  highlight.js  status.js  style.css
src/: Configuration.hs  DB.hs  Lang.hs  Main.hs  Offline.hs  Pages.hs  Paths_GoStat.hs  Server.hs  SgfBatching.hs  Transformations.hs
src/Data/SGF/: Parsing.hs  Types.hs
test/: TestExample.hs  Tests.hs  run.sh
test/SgfBatching/: Tests.hs
test/Transformations/: Tests.hs
test/runParser/: runParser  runParser.hs
(+935 files in other folders)
