Name:                GoStat
Version:             0.9.5
Synopsis:            A Haskell program for analysing Go games and calculating statistics.
Description:         
 GoStat is a Haskell program for analysing large collections of Go games (currently only on the 9x9 board). 
 It comes with a web UI and is powered by Happstack, HDBC and xhtml-3000. 
License:             BSD3
License-file:        LICENSE
Author:              Wojciech Jedynak
Maintainer:          wjedynak@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.0.2
Extra-source-files:  README
                     Makefile
                     public/*.js
                     public/style.css
                     public/img/*.gif
                     public/eidogo/player/css/*.css
                     public/eidogo/player/i18n/*.js
                     public/eidogo/player/images/*.gif
                     public/eidogo/player/images/*.png
                     public/eidogo/player/js/*.js
                     public/eidogo/player/js/all.compressed.js
                     public/jquery-ui/*

Data-files:          CONFIG
                     test/example.sgf
                     test/example2.sgf
                     db/games.db
                     
                     
                     


Source-repository head
  type:      git
  location:  git://github.com/wjzz/GoStat.git


library
  ghc-options: -Wall -fno-warn-unused-do-bind
  Build-depends:       base >= 3 && < 5,
                       parsec >= 2.1 && < 3
  exposed-modules: Data.SGF.Types, Data.SGF.Parsing
  hs-source-dirs: src

Executable GoStat

  GHC-Options: -W -Wall -threaded 
---optl-static -fforce-recomp -static
  Hs-source-dirs: src 
  Main-is:    	      Main.hs
  Build-depends:      base >= 3 && < 5,
                      filemanip == 0.3.*,
                      directory == 1.1.0.0,
                      filepath == 1.2.0.0,
                      strict == 0.3.*,
                      HDBC == 2.2.*,
                      HDBC-postgresql == 2.2.*,
                      HDBC-sqlite3 == 2.3.*,
                      happstack-server == 6.0.*,
                      xhtml == 3000.2.*,
                      mtl == 2.0.*
                      --parsec >= 2.1 && < 3
  Other-modules:      Configuration
                      SgfBatching
                      Transformations
                      Lang
                      DB
                      Pages
                      Server
                      Paths_GoStat
                      
Executable GoStatTests
  GHC-Options:         -W -Wall
  Hs-source-dirs:      src test 
  Main-is:    	       Tests.hs
  Build-depends:       base >= 3 && < 5,
                       parsec >= 2.1 && < 3,
                       -- hdbc == 2.2.6.*,
                       -- hdbc-postgresql == 2.2.3.*,
                       HUnit == 1.2.*,
                       QuickCheck == 1.2.*,
                       test-framework == 0.3.*,
                       test-framework-hunit == 0.2.*,
                       test-framework-quickcheck == 0.2.*

  Other-modules:       Data.SGF.Types.Tests
                       Data.SGF.Parsing.Tests
                       SgfBatching.Tests
                       Transformations.Tests
                       Paths_GoStat
